# Projet-data-warehouse

./: .gitignore  README.md  procedure_creation.md  requirements.txt
Terraform/: .terraform.lock.hcl  adf_linked_services.tf  main.tf  outputs.tf  providers.tf  rbac_configuration.tf  variables.tf
Terraform/sql/: 001_create_schemas.sql  002_create_dimensions.sql  003_create_facts.sql  004_populate_dimensions.sql  005_create_datamarts.sql  006_configure_security.sql  007_configure_performance.sql  deploy_dwh.py
analytics/: __init__.py  data_loader.py  export_to_sql.py  export_to_sql_bis.py  sql_to_adls_bis.py
analytics/api/: .gitignore  README.md  generate_env.py  pyproject.toml  requirements.txt  start.sh
analytics/api/app/: config.py  main.py
analytics/api/app/routers/: tables.py
analytics/etl/: __init__.py  load_dimensions.py  load_facts.py  run_etl.py
analytics/notebooks/: data_preparation.ipynb
analytics/tests/: __init__.py  test_dwh.py
docs/: E5_DATA_WAREHOUSE_GUIDE.md  architecture.md
ingestion/API/: fetch_communes.py
ingestion/Scraping/: scrape_taux.py
rapports/E5_Entrepot_Donnees/: README.md  main.tex  rapport_E5.tex
